--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        maven {
+            url "http://maven.google.com/"
+        }
+    }
 }
 
 dependencies {
@@ -31,13 +37,15 @@ dependencies {
     implementation 'com.google.gms:google-services:4.2.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.yandex.android:mapkit:3.3.1'
+    implementation 'com.yandex.android:places:3.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
