--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     implementation 'com.yandex.android:mapkit:3.3.1'
     implementation 'com.yandex.android:places:3.3.1'
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
-    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+    implementation 'com.hendraanggrian.material:collapsingtoolbarlayout-subtitle:1.0.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
