--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.hendraanggrian.material:collapsingtoolbarlayout-subtitle:1.0.0'
     implementation 'com.github.iammert:ReadableBottomBar:0.2'
+    implementation 'org.jetbrains:annotations:15.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
